--- a/templates/forum.html
+++ b/templates/forum.html
@@ -39,21 +39,21 @@
 		</form>
 	</div>
 	{{if .CurrentUser.Perms.CreateTopic}}
-	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="{{lang "quick_topic_aria"}}">
+	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="{{lang "quick_topic.aria"}}">
 		<form id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
-		<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="{{lang "quick_topic_avatar_alt"}}" title="{{lang "quick_topic_avatar_tooltip"}}" />
+		<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="{{lang "quick_topic.avatar_alt"}}" title="{{lang "quick_topic.avatar_tooltip"}}" />
 		<input form="quick_post_form" id="topic_board_input" name="topic-board" value="{{.Forum.ID}}" type="hidden">
 		<div class="main_form">
 			<div class="topic_meta">
 				<div class="formrow topic_name_row real_first_child">
 					<div class="formitem">
-						<input form="quick_post_form" name="topic-name" placeholder="{{lang "quick_topic_whatsup"}}" required>
+						<input form="quick_post_form" name="topic-name" placeholder="{{lang "quick_topic.whatsup"}}" required>
 					</div>
 				</div>
 			</div>
 			<div class="formrow topic_content_row">
 				<div class="formitem">
-					<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="{{lang "quick_topic_content_placeholder"}}" required></textarea>
+					<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="{{lang "quick_topic.content_placeholder"}}" required></textarea>
 				</div>
 			</div>
 			<div class="formrow poll_content_row auto_hide">
@@ -63,13 +63,13 @@
 			</div>
 			<div class="formrow quick_button_row">
 				<div class="formitem">
-					<button form="quick_post_form" name="topic-button" class="formbutton">{{lang "quick_topic_create_topic_button"}}</button>
-					<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "quick_topic_add_poll_button"}}</button>
+					<button form="quick_post_form" name="topic-button" class="formbutton">{{lang "quick_topic.create_topic_button"}}</button>
+					<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "quick_topic.add_poll_button"}}</button>
 					{{if .CurrentUser.Perms.UploadFiles}}
 					<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
-					<label for="upload_files" class="formbutton add_file_button">{{lang "quick_topic_add_file_button"}}</label>
+					<label for="upload_files" class="formbutton add_file_button">{{lang "quick_topic.add_file_button"}}</label>
 					<div id="upload_file_dock"></div>{{end}}
-					<button class="formbutton close_form">{{lang "quick_topic_cancel_button"}}</button>
+					<button class="formbutton close_form">{{lang "quick_topic.cancel_button"}}</button>
 				</div>
 			</div>
 		</div>
@@ -85,8 +85,8 @@
 				<a class="rowtopic" href="{{.Link}}" itemprop="itemListElement" title="{{.Title}}"><span>{{.Title}}</span></a>
 				<br /><a class="rowsmall starter" href="{{.Creator.Link}}" title="{{.Creator.Name}}">{{.Creator.Name}}</a>
 				{{/** TODO: Avoid the double '|' when both .IsClosed and .Sticky are set to true. We could probably do this with CSS **/}}
-				{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="{{lang "status_closed_tooltip"}}"> | &#x1F512;&#xFE0E</span>{{end}}
-				{{if .Sticky}}<span class="rowsmall topic_status_e topic_status_sticky" title="{{lang "status_pinned_tooltip"}}"> | &#x1F4CD;&#xFE0E</span>{{end}}
+				{{if .IsClosed}}<span class="rowsmall topic_status_e topic_status_closed" title="{{lang "status.closed_tooltip"}}"> | &#x1F512;&#xFE0E</span>{{end}}
+				{{if .Sticky}}<span class="rowsmall topic_status_e topic_status_sticky" title="{{lang "status.pinned_tooltip"}}"> | &#x1F4CD;&#xFE0E</span>{{end}}
 			</span>
 			{{/** TODO: Phase this out of Cosora and remove it **/}}
 			<div class="topic_inner_right rowsmall">
